<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/backgroundo"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Image de Profil -->
    <ImageView
        android:id="@+id/image2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Titre -->
    <TextView
        android:id="@+id/textViewbvn"
        android:fontFamily="@font/za"
        android:textColor="@color/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/bvn"
        android:textSize="90px"
        app:layout_constraintTop_toBottomOf="@id/image2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bloc de Connexion -->
    <LinearLayout
        android:id="@+id/loginBloc"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/accueil_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewbvn">

        <!-- Titre du Bloc -->
        <TextView
            android:id="@+id/textViewtitre"
            android:fontFamily="@font/za"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/titre"
            android:textColor="@color/backgroundo"
            android:textSize="60px" />

        <!-- Champ Username -->
        <EditText
            android:id="@+id/editTextnom"
            android:fontFamily="@font/za"
            android:layout_width="219dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/user"
            android:drawablePadding="15dp"
            android:hint="@string/log"
            android:inputType="text"
            android:paddingStart="30dp"
            android:textColorHint="@color/backgroundo"
            android:textSize="20dp" />

        <!-- Champ Password -->
        <EditText
            android:id="@+id/editTextmdp"
            android:fontFamily="@font/za"
            android:layout_width="219dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/user"
            android:drawablePadding="15dp"
            android:hint="@string/mdp"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:textColorHint="@color/backgroundo"
            android:textSize="20dp" />

        <!-- Bouton de Connexion -->
        <Button
            android:id="@+id/buttonconnexion"
            android:fontFamily="@font/zo"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/btn"
            android:textColor="@color/backgroundo"
            android:textSize="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
